<resources>

    <!-- Strings related to activity page -->
    <string name="app_name">ProjectLime</string>
    <string name="title_activity_main3">Pagina Principale</string>
    <string name="title_activity_qrcode">QR Code Scan</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_console_brand">Console Brand</string>
    <string name="title_activity_console_microsoft">Microsoft Console</string>
    <string name="title_activity_console_sony">Sony Console</string>
    <string name="title_activity_console_nintendo">Nintendo Console</string>
    <string name="title_activity_console_sega">SEGA Console</string>
    <string name="title_activity_console_atari">Atary Console</string>
    <string name="title_activity_rating">Rating App</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to logo -->
    <string name="logomicrosoft">LogoMicrosoft</string>
    <string name="logoxbox1">LogoXbox1</string>
    <string name="logoxbox360">LogoXbox360</string>
    <string name="logoxboxOne">LogoXboxOne</string>
    <string name="logosony">LogoSony</string>
    <string name="logoplaystation1">LogoPlaystation1</string>
    <string name="logoplaystation2">LogoPlaystation2</string>
    <string name="logoplaystation3">LogoPlaystation3</string>
    <string name="logoplaystation4">LogoPlaystation4</string>
    <string name="logopsp">LogoPSP</string>
    <string name="logopsv">LogoPSV</string>
    <string name="logonintendo">LogoNintendo</string>
    <string name="logosega">LogoSega</string>
    <string name="logoatari">LogoAtari</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to side menu -->
    <string name="console_brand">Console Brand</string>
    <string name="qr_tools">QR Tools</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rating_app">Rating App</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="backup">Backup</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="accedi">Accedi</string>
    <string name="submitRateApp">Submit</string>

    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="not_login">not_login</string>
    <string name="log_out">Log Out</string>
    <string name="revoke">Revoke</string>

    <string name="not_revoke">not_revoke</string>
    <string name="not_close_session">not_close_session</string>
    <string name="proflie">proflie</string>
    <string name="android_studio">Android Studio</string>
    <string name="immagineprofilomenu">ImmagineProfiloMenu</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="button">Button</string>


</resources>
