<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gamepad"
            android:icon="@drawable/ic_menu_videogame_asset"
            android:title="@string/console_brand" />
        <item
            android:id="@+id/nav_qrtools"
            android:icon="@drawable/ic_menu_qrtools"
            android:title="@string/qr_tools" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/slideshow" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rating"
                android:icon="@drawable/ic_menu_ratestar"
                android:title="@string/rating_app" />

        </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_person"
                android:title="@string/login" />
            <item
                android:id="@+id/nav_backup"
                android:icon="@drawable/ic_menu_backup"
                android:title="@string/backup" />

        </menu>
    </item>
</menu>
