<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.projectLime.ConsoleSonyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoplaystation1"
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:background="#CCCCCC"
                android:clickable="true"
                android:contentDescription="@string/logoplaystation1"
                android:focusable="true"
                android:paddingBottom="1dp"
                android:paddingTop="1dp"
                android:src="@drawable/logo_sony_playstation1"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logoplaystation2"
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:layout_marginTop="10dp"
                android:background="#CCCCCC"
                android:clickable="true"
                android:contentDescription="@string/logoplaystation2"
                android:focusable="true"
                android:paddingBottom="1dp"
                android:paddingTop="1dp"
                android:src="@drawable/logo_sony_playstation2"
                app:layout_constraintTop_toBottomOf="@+id/logoplaystation1" />

            <ImageView
                android:id="@+id/logoplaystation3"
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:layout_marginTop="10dp"
                android:background="#CCCCCC"
                android:clickable="true"
                android:contentDescription="@string/logoplaystation3"
                android:focusable="true"
                android:paddingBottom="1dp"
                android:paddingTop="1dp"
                android:src="@drawable/logo_sony_playstation3"
                app:layout_constraintTop_toBottomOf="@+id/logoplaystation2" />

            <ImageView
                android:id="@+id/logoplaystation4"
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:layout_marginTop="10dp"
                android:background="#CCCCCC"
                android:clickable="true"
                android:contentDescription="@string/logoplaystation4"
                android:focusable="true"
                android:paddingBottom="1dp"
                android:paddingTop="1dp"
                android:src="@drawable/logo_sony_playstation4"
                app:layout_constraintTop_toBottomOf="@+id/logoplaystation3" />

            <ImageView
                android:id="@+id/logopsp"
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:layout_marginTop="10dp"
                android:background="#CCCCCC"
                android:clickable="true"
                android:contentDescription="@string/logopsp"
                android:focusable="true"
                android:paddingBottom="1dp"
                android:paddingTop="1dp"
                android:src="@drawable/logo_sony_psp"
                app:layout_constraintTop_toBottomOf="@+id/logoplaystation4" />

            <ImageView
                android:id="@+id/logopsv"
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:layout_marginTop="10dp"
                android:background="#CCCCCC"
                android:clickable="true"
                android:contentDescription="@string/logopsv"
                android:focusable="true"
                android:paddingBottom="1dp"
                android:paddingTop="1dp"
                android:src="@drawable/logo_sony_psv"
                app:layout_constraintTop_toBottomOf="@+id/logopsp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </LinearLayout>


    </ScrollView>
</android.support.constraint.ConstraintLayout>

