<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.app.projectLime.BrandConsoleActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/logomicrosoft"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:contentDescription="@string/logomicrosoft"
                android:src="@drawable/microsoft_logo"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:background="#CCCCCC"
                android:clickable="true"
                android:focusable="true" />

            <ImageView
                android:id="@+id/logosony"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/logosony"
                android:src="@drawable/sony_logo"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:background="#CCCCCC"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@+id/logomicrosoft" />

            <ImageView
                android:id="@+id/logonintendo"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/logonintendo"
                android:src="@drawable/nintendo_logo"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:background="#CCCCCC"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@+id/logosony" />

            <ImageView
                android:id="@+id/logosega"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/logosega"
                android:src="@drawable/sega_logo"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:background="#CCCCCC"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@+id/logonintendo" />

            <ImageView
                android:id="@+id/logoatari"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/logonintendo"
                android:src="@drawable/atari_logo"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:background="#CCCCCC"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@+id/logosega" />
        </LinearLayout>


    </ScrollView>
</android.support.constraint.ConstraintLayout>
